Moved the spacing on the content div's content from margins on the content to padding on the div itself.  Fixed some weird issue with the JS populated ULs not respecting the margins (though everything else did).

--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ nav .active {
 .content {
   background-color: #FEFAC0;
   border: 2px solid black;
-  padding: 0 0 30px;
+  padding: 0 0 30px 30px;
   margin: 80px 0 0 15px;
   width: 0;
   flex-grow: 10;
@@ -118,11 +118,11 @@ nav .active {
   color: #785616;
   font-weight: normal;
   font-size: 1.8em;
-  margin: 30px 30px 10px;
+  margin: 30px 0 10px;
 }
 
 .content ul {
-  margin: 0 0 0 25px;
+  margin: 0;
   padding: 0;
 }
 
